--- a/day3.1/views/index.ejs
+++ b/day3.1/views/index.ejs
@@ -8,12 +8,11 @@
 </head>
 <body>
     <form action="/submitted-data" method="post">
-        <input type="text" placeholder="Username" name="name" />
+        <input type="text" placeholder="Username" name="username" />
         <input type="text" placeholder="email" name="email"/>
-        <input type="password" placeholder="password" name="pass"/>
+        <input type="password" placeholder="password" name="password"/>
         <button>Submit form</button>
         <img src="/assets/girgit.jpg" alt="">
     </form>
-    <script src="index.js"></script>
 </body>
 </html>
