--- a/login-signUp-day4/views/login.ejs
+++ b/login-signUp-day4/views/login.ejs
@@ -7,10 +7,12 @@
 </head>
 <body>
     <h2>Login here...</h2>
-    <form action="/" method="post">
-        <input type="text" name="username" placeholder="name" />
-        <input type="password" name="password" placeholder="password" />
-        <button>Login</button>
+    <form action="/login" method="post">
+        <input type="text" name="username" placeholder="name" /> <br>
+        <input type="password" name="password" placeholder="password" /> <br>
+        <button>Login</button> <br>
+        
+        <a href="/sign-up">create new user</a>
     </form>
 </body>
 </html>
